Added Monitoring Slides

--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@
             <h1>Monitoring</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/Monitoring.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -558,8 +558,8 @@
             <h1>Nagios</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
+            <figure class="banner2">
+                <img src="images/Nagios-Icinga2.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
@@ -595,7 +595,7 @@
     </section>
     <section id="28" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="180">
         <header class="fixed-top">
-            <h1>Monitoring/Reporting/Dashboard</h1>
+            <h1>Reporting/Alert/Dashboard</h1>
         </header>
         <section class="center-top">
             <figure class="banner3">
