Added Monitoring Slides

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         </header>
         <section class="center-top">
             <figure class="banner3">
-                <img src=""></img>
+                <img src="images/pager-duty.png"></img>
                 <figureCaption></figureCaption>
             </figure>
 
