Combined Monitoring and Reporting into one

--- a/index.html
+++ b/index.html
@@ -411,6 +411,28 @@
     </section>
     <section id="19" class="step slide" data-x="33000" data-y="-1500" data-rotate-y="20">
         <header class="fixed-top">
+            <h1>Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/tools.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <br>
+            <p>Assumption -</p>
+            <p>Continuous Integration Tools are already in place</p>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="20" class="step slide" data-x="35000" data-y="-1500" data-rotate-y="40">
+        <header class="fixed-top">
             <h1>Software Provisioning</h1>
         </header>
         <section class="center-top">
@@ -429,7 +451,7 @@
         </footer>
 
     </section>
-    <section id="20" class="step slide" data-x="35000" data-y="-1500" data-rotate-y="40">
+    <section id="21" class="step slide" data-x="37000" data-y="-1500" data-rotate-y="60">
         <header class="fixed-top">
             <h1>Puppet</h1>
         </header>
@@ -449,7 +471,7 @@
         </footer>
 
     </section>
-    <section id="21" class="step slide" data-x="37000" data-y="-1500" data-rotate-y="60">
+    <section id="22" class="step slide" data-x="39000" data-y="-1500" data-rotate-y="80">
         <header class="fixed-top">
             <h1>Puppet Example</h1>
         </header>
@@ -469,7 +491,7 @@
         </footer>
 
     </section>
-    <section id="22" class="step slide" data-x="39000" data-y="-1500" data-rotate-y="80">
+    <section id="23" class="step slide" data-x="41000" data-y="-1500" data-rotate-y="100">
         <header class="fixed-top">
             <h1>Other Tools</h1>
         </header>
@@ -493,7 +515,29 @@
         </footer>
 
     </section>
-    <section id="23" class="step slide" data-x="41000" data-y="-1500" data-rotate-y="100">
+    <section id="24" class="step slide" data-x="43000" data-y="-1500" data-rotate-y="120">
+        <header class="fixed-top">
+            <h1>Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/tools.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <br>
+            <p>Assumption -</p>
+            <p>Continuous Integration Tools are already in place</p>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="25" class="step slide" data-x="45000" data-y="-1500" data-rotate-y="140">
         <header class="fixed-top">
             <h1>Configuration Management</h1>
         </header>
@@ -513,7 +557,7 @@
         </footer>
 
     </section>
-    <section id="24" class="step slide" data-x="43000" data-y="-1500" data-rotate-y="120">
+    <section id="26" class="step slide" data-x="47000" data-y="-1500" data-rotate-y="160">
         <header class="fixed-top">
             <h1>Demo Time</h1>
         </header>
@@ -533,7 +577,29 @@
         </footer>
 
     </section>
-    <section id="25" class="step slide" data-x="45000" data-y="-1500" data-rotate-y="120">
+    <section id="27" class="step slide" data-x="49000" data-y="-1500" data-rotate-y="180">
+        <header class="fixed-top">
+            <h1>Tools</h1>
+        </header>
+        <section class="center-top">
+            <figure class="banner3">
+                <img src="images/tools.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+            <br>
+            <p>Assumption -</p>
+            <p>Continuous Integration Tools are already in place</p>
+        </section>
+        <footer class="fixed-bottom">
+            <hr/>
+            <figure class="logo">
+                <img src="images/synerzip-logo.png"></img>
+                <figureCaption></figureCaption>
+            </figure>
+        </footer>
+
+    </section>
+    <section id="28" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="200">
         <header class="fixed-top">
             <h1>Monitoring</h1>
         </header>
@@ -553,7 +619,7 @@
         </footer>
 
     </section>
-    <section id="26" class="step slide" data-x="47000" data-y="-1500" data-rotate-y="140">
+    <section id="29" class="step slide" data-x="53000" data-y="-1500" data-rotate-y="220">
         <header class="fixed-top">
             <h1>Nagios</h1>
         </header>
@@ -573,47 +639,8 @@
         </footer>
 
     </section>
-    <section id="27" class="step slide" data-x="49000" data-y="-1500" data-rotate-y="160">
-        <header class="fixed-top">
-            <h1>Other Tools</h1>
-        </header>
-        <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
 
-        </section>
-        <footer class="fixed-bottom">
-            <hr/>
-            <figure class="logo">
-                <img src="images/synerzip-logo.png"></img>
-                <figureCaption></figureCaption>
-            </figure>
-        </footer>
-
-    </section>
-    <section id="28" class="step slide" data-x="51000" data-y="-1500" data-rotate-y="180">
-        <header class="fixed-top">
-            <h1>Reporting/Alert/Dashboard</h1>
-        </header>
-        <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
-
-        </section>
-        <footer class="fixed-bottom">
-            <hr/>
-            <figure class="logo">
-                <img src="images/synerzip-logo.png"></img>
-                <figureCaption></figureCaption>
-            </figure>
-        </footer>
-
-    </section>
-    <section id="29" class="step slide" data-x="53000" data-y="-1500" data-rotate-y="200">
+    <section id="30" class="step slide" data-x="55000" data-y="-1500" data-rotate-y="240">
         <header class="fixed-top">
             <h1>Pager Duty</h1>
         </header>
@@ -633,17 +660,16 @@
         </footer>
 
     </section>
-    <section id="30" class="step slide" data-x="55000" data-y="-1500" data-rotate-y="220">
+    <section id="31" class="step slide" data-x="57000" data-y="-1500" data-rotate-y="260">
         <header class="fixed-top">
             <h1>Other Tools</h1>
         </header>
-        <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
+        <ul>
+            <li><a href="http://www.zenoss.com/" target="_blank">ZenOss</a></li>
+            <li><a href="http://www.hyperic.com/" target="_blank">Hyperic </a></li>
+            <li><a href="http://newrelic.com/" target="_blank">NewRelic </a></li>
 
-        </section>
+        </ul>
         <footer class="fixed-bottom">
             <hr/>
             <figure class="logo">
@@ -653,7 +679,7 @@
         </footer>
 
     </section>
-    <section id="31" class="step slide" data-x="57000" data-y="-1500" data-rotate-y="240">
+    <section id="32" class="step slide" data-x="59000" data-y="-1500" data-rotate-y="280">
         <header class="fixed-top">
             <h1>Expert Tips</h1>
         </header>
@@ -673,7 +699,7 @@
         </footer>
 
     </section>
-    <section id="32" class="step slide" data-x="59000" data-y="-1500" data-rotate-y="260">
+    <section id="33" class="step slide" data-x="61000" data-y="-1500" data-rotate-y="300">
         <header class="fixed-top">
             <h1>Conclusion</h1>
         </header>
@@ -694,7 +720,7 @@
 
     </section>
 
-    <section id="33" class="step slide" data-x="63000" data-y="-1500" data-rotate-y="300">
+    <section id="34" class="step slide" data-x="63000" data-y="-1500" data-rotate-y="320">
         <header class="fixed-top">
             <h1>Questions</h1>
         </header>
@@ -720,7 +746,7 @@
         </footer>
 
     </section>
-    <section id="34" class="step slide" data-x="65000" data-y="-1500" data-rotate-y="320">
+    <section id="35" class="step slide" data-x="65000" data-y="-1500" data-rotate-y="340">
         <header class="fixed-top">
             <h1>Synerzip in a NutShell</h1>
         </header>
@@ -757,7 +783,7 @@
         </footer>
 
     </section>
-    <section id="35" class="step slide" data-x="67000" data-y="-1500" data-rotate-y="340">
+    <section id="36" class="step slide" data-x="67000" data-y="-1500" data-rotate-y="360">
         <header class="fixed-top">
             <h1>Our Clients</h1>
         </header>
@@ -777,7 +803,7 @@
         </footer>
 
     </section>
-    <section id="36" class="step slide" data-x="69000" data-y="-1500" data-rotate-y="360">
+    <section id="38" class="step slide" data-x="69000" data-y="-1500" data-rotate-y="360">
         <header class="fixed-top">
             <h1></h1>
         </header>
