Finished with Subu's details

--- a/index.html
+++ b/index.html
@@ -57,16 +57,31 @@
             <h1>About Me</h1>
         </header>
         <section class="center-middle">
-            <figure class="profile inline">
-                <img src="images/profile.jpg"></img>
-                <figureCaption></figureCaption>
-            </figure>
+            <table>
+                <tr style="vertical-align: top" class="right">
+                    <td>
+                        <figure class="profile inline">
+                            <img src="images/profile.jpg"></img>
+                            <figureCaption></figureCaption>
+                        </figure>
+                    </td>
+                    <td style="vertical-align: top">
+                        <ul>
+                            <li>Director of Engineering @ Synerzip</li>
+                            <li>Technology Evangelist</li>
+                            <li>Speaker at Tech Conferences</li>
+                        </ul>
+                    </td>
+                </tr>
+            </table>
+
             <aside class="right">
-                <ul>
-                    <li>Director of Engineering @ Synerzip</li>
-                    <li>Technology Evangelist</li>
-                    <li>Speaker at Tech Conferences</li>
+                <ul>Contact Details
+                    <li>Twitter: <a href="https://twitter.com/rohitghatol" target="_blank">rohitghatol</a></li>
+                    <li>Linkedin: <a href="www.linkedin.com/in/rohitghatol" target="_blank">www.linkedin.com/in/rohitghatol</a></li>
+                    <li>HomePage: <a href="http://rohitghatol.com" target="_blank">http://rohitghatol.com</a> </li>
                 </ul>
+
             </aside>
         </section>
         <footer class="fixed-bottom">
@@ -668,8 +683,12 @@
             <li><a href="http://www.zenoss.com/" target="_blank">ZenOss</a></li>
             <li><a href="http://www.hyperic.com/" target="_blank">Hyperic </a></li>
             <li><a href="http://newrelic.com/" target="_blank">NewRelic </a></li>
-
+            <li><b>etc....</b></li>
         </ul>
+        <br><br>
+        <br><br>
+        <hr>
+        <p>Like I said tools are not so important and are in plenty</p>
         <footer class="fixed-bottom">
             <hr/>
             <figure class="logo">
@@ -684,10 +703,13 @@
             <h1>Expert Tips</h1>
         </header>
         <section class="center-top">
-            <figure class="banner3">
-                <img src=""></img>
-                <figureCaption></figureCaption>
-            </figure>
+            <ul>
+                <li>Remember Everyone Codes</li>
+                <li>In-House Staging Environment a Must</li>
+                <li>Automated Dev/QA/Staging/Prod Environments</li>
+                <li>Measure Everything</li>
+                <li>DevOps is progressively elaborated</li>
+            </ul>
 
         </section>
         <footer class="fixed-bottom">
@@ -731,10 +753,10 @@
             </figure>
             <br>
             <div class="center-text">
-                <p>www.synerzip.com</p>
-                <p>Hemant Elhence</p>
-                <p>hemant@synerzip.com</p>
-                <p>469.322.0349</p>
+                <p><a href="http://www.synerzip.com" target="_blank">www.synerzip.com</a></p>
+                <p>Subu Sankara</p>
+                <p><a href="mailto:subu@synerzip.com">subu@synerzip.com</a></p>
+                <p>510.579.9673</p>
             </div>
         </section>
         <footer class="fixed-bottom">
@@ -805,25 +827,26 @@
     </section>
     <section id="38" class="step slide" data-x="69000" data-y="-1500" data-rotate-y="360">
         <header class="fixed-top">
-            <h1></h1>
+            <h1>
+                <div class="center-text">
+                    <p>Thanks!</p>
+                    <br>
+                    <p>Call us for Free Consultation</p>
+                </div>
+            </h1>
+
         </header>
-        <section class="center-top para">
-            <div class="center-text">
-                <p>Thanks!</p>
-                <p>Call us for Free Consultation</p>
-            </div>
+        <section class="center-middle">
             <br>
             <figure class="banner4">
                 <img src="images/synerzip.png"></img>
                 <figureCaption></figureCaption>
             </figure>
             <br>
-            <br>
-            <div>
-                <p>Hemant Elhence</p>
-                <p>hemant@synerzip.com</p>
-                <p>469.322.0349</p>
-
+            <div class="center-text">
+                <p>Subu Sankara</p>
+                <p><a href="mailto:subu@synerzip.com" target="_blank">subu@synerzip.com</a></p>
+                <p>510.579.9673</p>
             </div>
         </section>
         <footer class="fixed-bottom">
